// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountPickerItem component should display the error if it has error 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="col-account-picker-button col-account-picker-button-account"
  to="/connected/bouilligue/accounts/123456789"
>
  <div
    className="col-account-picker-button-infos"
  >
    <span>
      123456789
    </span>
    <small />
  </div>
  <div
    className="col-account-picker-button-status col-account-picker-button-status--error"
  >
    <span>
      Expected test error
    </span>
    <Icon
      icon="warning"
      spin={false}
    />
  </div>
</NavLink>
`;

exports[`AccountPickerItem component should display the error if it has error even if it has update 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="col-account-picker-button col-account-picker-button-account"
  to="/connected/bouilligue/accounts/123456789"
>
  <div
    className="col-account-picker-button-infos"
  >
    <span>
      123456789
    </span>
    <small />
  </div>
  <div
    className="col-account-picker-button-status col-account-picker-button-status--error"
  >
    <span>
      Expected test error
    </span>
    <Icon
      icon="warning"
      spin={false}
    />
  </div>
</NavLink>
`;

exports[`AccountPickerItem component should display the update message if has update and no errors 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="col-account-picker-button col-account-picker-button-account"
  to="/connected/bouilligue/accounts/123456789"
>
  <div
    className="col-account-picker-button-infos"
  >
    <span>
      123456789
    </span>
    <small />
  </div>
  <div
    className="col-account-picker-button-status"
  >
    <span>
      Update available
    </span>
  </div>
</NavLink>
`;

exports[`AccountPickerItem component should display the update message if has update even if is connected 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="col-account-picker-button col-account-picker-button-account"
  to="/connected/bouilligue/accounts/123456789"
>
  <div
    className="col-account-picker-button-infos"
  >
    <span>
      123456789
    </span>
    <small />
  </div>
  <div
    className="col-account-picker-button-status"
  >
    <span>
      Update available
    </span>
  </div>
</NavLink>
`;

exports[`AccountPickerItem component should render a spinner if it is running 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="col-account-picker-button col-account-picker-button-account"
  to="/connected/bouilligue/accounts/123456789"
>
  <div
    className="col-account-picker-button-infos"
  >
    <span>
      123456789
    </span>
    <small />
  </div>
  <Wrapper />
</NavLink>
`;

exports[`AccountPickerItem component should render correctly if success 1`] = `
<NavLink
  activeClassName="active"
  aria-current="page"
  className="col-account-picker-button col-account-picker-button-account"
  to="/connected/bouilligue/accounts/123456789"
>
  <div
    className="col-account-picker-button-infos"
  >
    <span>
      123456789
    </span>
    <small />
  </div>
  <Icon
    color="#2BBA40"
    icon="check-circleless"
    spin={false}
  />
</NavLink>
`;
